--- a/package.json
+++ b/package.json
@@ -9,31 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "typescript": "^5.4.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "portkey-ai": "^1.2.0",
     "@vercel/blob": "^0.23.0",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.7.0",
-    "xlsx": "^0.18.5",
-    "pizzip": "^3.1.6",
-    "xml2js": "^0.6.2",
-    "lucide-react": "^0.344.0",
+    "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
+    "lucide-react": "^0.344.0",
+    "mammoth": "^1.7.0",
+    "next": "^14.2.0",
     "next-themes": "^0.2.1",
+    "openai": "^6.9.1",
+    "pdf-parse": "^1.1.1",
+    "pizzip": "^3.1.6",
+    "portkey-ai": "^1.2.0",
+    "postcss": "^8.4.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
-    "sonner": "^1.4.0"
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/pdf-parse": "^1.1.4",
@@ -42,5 +43,3 @@
     "eslint-config-next": "^14.2.0"
   }
 }
-
-
