--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.7.0",
     "next": "^14.2.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18.3.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "recharts": "^3.5.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
